<resources>
    <string name="app_name">FoodForYou</string>
    <string name="name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="next">Next</string>

    <string name="DatabaseUser">food_users</string>
    <string name="DatabaseFirstName">first_name</string>
    <string name="DatabaseLastName">last_name</string>
    <string name="DatabaseEmail">email</string>
    <string name="DatabaseUserSurvey">user_survey_preference</string>

    <string name="DatabaseUserSurveyPreferredMeals">meals</string>
    <string name="DatabaseUserSurveyMeals">meals</string>
    <string name="DatabaseUserSurveyAllergy">allergies</string>
    <string name="DatabaseUserSurveyCuisine">cuisine</string>
    <string name="DatabaseIngredientsPantry">user_pantry</string>

    <string name="DatabasePersonalModel">user_personal_model</string>


    <string name="MealTypes">Breakfast,Lunch,Dinner</string>
    <string name="AllergyTypes">Milk,Egg,Fish,Shellfish,Nut,Peanut,Wheat,Soybean,Vegetarian,Vegan,Pescatarian,Pork Free</string>
    <string name="CuisineTypes">Greek,Southern US,Filipino,Indian,Jamaican,Spanish,Italian,Mexican,Chinese,British,Thai,Vietnamese,Cajun Creole,Brazilian,French,Japanese,Irish,Korean,Moroccan,Russian</string>

    <string name="welcomeUser">Welcome Back</string>
    <string name="userImage">User Image</string>
    <string name="did_you_like_the_recipe">Did you like the recipe?</string>
    <string name="yes">Yes</string>
    <string name="not_enough_time">Not enough time</string>
    <string name="no">No</string>
</resources>